# NUClearExample

./: CMakeLists.txt  LICENSE  NUClearExample.sublime-project  README.md  b.py
cmake/Modules/: Compiler.cmake  FindCATCH.cmake  FindEigen3.cmake  FindFSWatch.cmake  FindYAML-CPP.cmake  Finduv.cmake  SharedLibraries.cmake  ToolchainLibraryFinder.cmake
message/: EnhancedMessages.cmake
message/generator/: Enum.py  Field.py  File.py  Message.py  textutil.py
module/example/PeriodicEmitter/src/: PeriodicEmitter.cpp
module/example/PythonExample/: CMakeLists.txt
module/example/PythonExample/src/: DSLWords.py  NUClearBinding.py  PythonExample.cpp  PythonExample.h  PythonExample.py
module/extension/FileWatcher/src/: FileWatcher.cpp
module/support/ReactionTimer/: CMakeLists.txt
module/support/ReactionTimer/src/: ReactionTimer.cpp  ReactionTimer.h
module/support/SignalCatcher/: README.md
module/support/SignalCatcher/src/: SignalCatcher.cpp  SignalCatcher.h
module/support/configuration/NetworkConfiguration/src/: NetworkConfiguration.cpp  NetworkConfiguration.h
module/support/logging/ConsoleLogHandler/src/: ConsoleLogHandler.cpp  ConsoleLogHandler.h
nuclear/: .gitrepo  CMakeLists.txt  b.py
nuclear/cmake/Modules/: FindEigen3.cmake  HeaderLibrary.cmake  NUClearModule.cmake  NUClearRole.cmake
nuclear/message/: EnhancedMessages.cmake  StandardMessages.cmake  build_message_class.py
nuclear/message/generator/: Enum.py  Field.py  File.py  Message.py
nuclear/message/include/message/: MessageBase.h
nuclear/module/: CMakeLists.txt  NUClearModule.cmake
nuclear/module/python/: nuclear.py  test.py
nuclear/roles/: CMakeLists.txt  generate_role.py
nuclear/utility/: CMakeLists.txt
roles/: example.role  python_example.role
shared/extension/: Configuration.h  FileWatch.h
shared/message/example/: ExampleMessage.proto
shared/utility/file/: fileutil.cpp  fileutil.h
shared/utility/strutil/: ansi.h  banner.h
shared/utility/support/evil/: pure_evil.cpp  pure_evil.h
